fixed spacing of chart

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color:black;
+  background-color:white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
